--- a/PimWeb/Views/Account/Login.cshtml
+++ b/PimWeb/Views/Account/Login.cshtml
@@ -11,10 +11,10 @@
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="my-1">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 form-label" })
+                    @Html.LabelFor(m => m.Name, new { @class = "col-md-2 form-label" })
                     <div class="col">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="my-1">
