--- a/PimWeb/Views/Home/IndexPartial.cshtml
+++ b/PimWeb/Views/Home/IndexPartial.cshtml
@@ -1,24 +1,24 @@
 ﻿@model PimWeb.Models.HomeViewModel
 
-@* @using (Html.BeginForm("Create", "Home", FormMethod.Post, new { id = "mainForm", @class = "form-horizontal"})) *@
-@* { *@
-@*     <div class="form-group"> *@
-@*         <div class="col-md-11"> *@
-@*             @Html.TextAreaFor(m => m.NewNoteText, new {@class = "form-control", style = "height: 10em"}) *@
-@*         </div> *@
-@*     </div> *@
-@* *@
-@*     <div class="form-group"> *@
-@*         <div class="col-md-11"> *@
-@*             <input type="submit" id="btnSubmit" class='btn btn-primary btn-lg' value="Create" /> *@
-@*         </div> *@
-@*     </div> *@
-@* } *@
-@* *@
-@* <h3> *@
-@*     Recent notes *@
-@* </h3> *@
-@* *@
-@* <div id="divNoteList" class=""> *@
-@*     @Html.Partial("NoteList", Model.LastUpdatedNotes) *@
-@* </div> *@
+@using (Html.BeginForm("Create", "Home", FormMethod.Post, new { id = "mainForm", @class = ""}))
+{
+    <div class="my-2">
+        <div class="col-md-11">
+            @Html.TextAreaFor(m => m.NewNoteText, new {@class = "form-control", style = "height: 10em"})
+        </div>
+    </div>
+
+    <div class="my-2">
+        <div class="col-md-11">
+            <input type="submit" id="btnSubmit" class='btn btn-primary btn-lg' value="Create" />
+        </div>
+    </div>
+}
+
+<h3>
+    Recent notes
+</h3>
+
+<div id="divNoteList" class="">
+    @Html.Partial("NoteList", Model.LastUpdatedNotes)
+</div>
