--- a/PimWeb/Views/Search/Search.cshtml
+++ b/PimWeb/Views/Search/Search.cshtml
@@ -2,28 +2,27 @@
 @{
     ViewBag.Title = "Search";
 }
-<script src="~/js/Search.js" asp-append-version="true"></script>
 
 @Html.Partial("SearchPartial", Model, ViewData)
 
-@* @section Init *@
-@* { *@
-@*     var config = { *@
-@*     mainFormSelector: '#mainForm', *@
-@*     deleteNoteUrl: '@Url.Action("Delete")', *@
-@*     deleteNoteButtonSelector: '[delete-note-by-id]', *@
-@*     divInProgressSelector: '#progressIndicator', *@
-@*     buttonAttributeNameNoteId: "noteId", *@
-@*     divNoteListSelector: "#divNoteList", *@
-@*     }; *@
-@* *@
-@*     (pim.pages.search) *@
-@*     && *@
-@*     (pim.pages.search.init(config)); *@
-@* } *@
-@*   *@
-@* <hr/> *@
-@*     *@
-@* <div> *@
-@*     @Html.ActionLink("Back to home page", "Index", "Home") *@
-@* </div> *@
+@section Init
+{
+    var config = {
+    mainFormSelector: '#mainForm',
+    deleteNoteUrl: '@Url.Action("Delete")',
+    deleteNoteButtonSelector: '[delete-note-by-id]',
+    divInProgressSelector: '#progressIndicator',
+    buttonAttributeNameNoteId: "noteId",
+    divNoteListSelector: "#divNoteList",
+    };
+
+    (pim.pages.search)
+    &&
+    (pim.pages.search.init(config));
+}
+
+<hr/>
+
+<div>
+    @Html.ActionLink("Back to home page", "Index", "Home")
+</div>
