--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -1,44 +1,44 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fulltext PIM -  - PimWeb</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-</head>
-<body>
+﻿@{
+    Layout = "_BaseLayout";
+}
+
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container-fluid d-flex justify-content-between">
-            <div class="d-flex">
-                <a class="navbar-brand" asp-area="" href="~/">MegaPatam PIM</a>
+        <div class="container-fluid">
+            <div class="d-md-flex justify-content-between w-100">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <a class="navbar-brand" asp-area="" href="~/">MegaPatam PIM</a>
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    <ul class="navbar-nav flex-grow-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" href="/Home/About">About</a>
                         </li>
                     </ul>
+                    <div class="d-md-flex flex-grow-1 justify-content-end">
+                        <div class="w-100 mx-2 top-search">
+                            @using (Html.BeginForm("Search", "Search", FormMethod.Get, new { @class = "", role = "search" }))
+                            {
+                                <div class="input-group w-100" style="">
+                                    @Html.TextBox("query", null, new { id = "tbQuery", @class = "form-control", style = "background-color: lightgray;", title = "Search your notes" })
+                                    <button type="submit" class="btn btn-primary">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </div>
+                            }
+                        </div>
+                        <div class="col-auto">
+                            @await Html.PartialAsync("_LoginPartial")
+                        </div>
+                    </div>
                 </div>
             </div>
-            @using (Html.BeginForm("Search", "Search", FormMethod.Get, new { @class = "", role = "search" }))
-            {
-                <div class="input-group w-100" style="">
-                    @Html.TextBox("query", null, new { id = "tbQuery", @class = "form-control", style = "background-color: lightgray;", title = "Search your notes" })
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
-            }
-            @await Html.PartialAsync("_LoginPartial")
         </div>
     </nav>
 </header>
+
     <div class="container-fluid">
         @if (ViewBag.ShowPageCaption != false && !string.IsNullOrWhiteSpace(ViewBag.Title))
         {
@@ -69,13 +69,14 @@
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/pim.js" asp-append-version="true"></script>
     <script src="~/js/SeeLatestAndCreate.js" asp-append-version="true"></script>
     <script src="~/js/Search.js" asp-append-version="true"></script>
     <script src="~/js/ViewEdit.js" asp-append-version="true"></script>
 
-    //@await RenderSectionAsync("Scripts", required: false)
+    @* @await RenderSectionAsync("Scripts", required: false) *@
 
     @if (IsSectionDefined("Init"))
     {
@@ -97,6 +98,3 @@
 
         </script>
     }
-
-</body>
-</html>
