identity seed working

--- a/PimWeb/Views/Shared/NoteList.cshtml
+++ b/PimWeb/Views/Shared/NoteList.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PimWeb.Models
-@model ICollection<FulltextStorageLib.Note>
+@model ICollection<PimWeb.AppCode.Note>
 
 @foreach (var note in Model)
 {
