--- a/PimWeb/Views/ViewEdit/ViewEdit.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PimWeb.Models.NoteViewModel
 
 @{
-    ViewBag.Title = Model.Note?.Name ?? "Unsaved note";
+    ViewBag.Title = Model.Caption ?? "Unsaved note";
     ViewBag.ShowPageCaption = false;
 }
 
