--- a/PimWeb/Views/ViewEdit/ViewEdit.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEdit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = Model.Caption ?? "Unsaved note";
-    ViewBag.ShowPageCaption = false;
+    ViewBag.ShowPageCaption = true;
 }
 
 @Html.Partial("ViewEditPartial", Model)
