--- a/PimWeb/Views/Shared/NoteList.cshtml
+++ b/PimWeb/Views/Shared/NoteList.cshtml
@@ -4,7 +4,7 @@
 @foreach (var note in Model)
 {
     <div class="row form-group">
-        <div note-name class="col-md-10">
+        <div note-name class="col-md-11">
             <span class="text-muted small">@($"{note.LastUpdateTime:ddd dd MMM, HH:mm} ")</span>
             <a note-name href="@Url.Action("Index", "ViewEdit", new {id = note.Id})">
                 @note.Name
@@ -16,7 +16,7 @@
                 @:&nbsp; <span class="text-muted small">@($"(Created {note.CreateTime:ddd dd MMM, HH:mm})")</span>
             }
         </div>
-        <div class="col-md-2">
+        <div class="col-md-1 text-end">
             <input delete-note-by-id type="submit" class="btn btn-warning pull-right" noteId="@note.Id" value="Delete"/>
         </div>
     </div>
