--- a/PimWeb/Views/Search/SearchPartial.cshtml
+++ b/PimWeb/Views/Search/SearchPartial.cshtml
@@ -15,13 +15,13 @@
     <div class="form-group row">
         <div class="col-md-auto my-2">
             <div class="row">
-                @Html.Label("", "Last update time from", new { @class = "col-form-label col-auto" })
+                @Html.Label("", "Last update time from", new { @class = "col-form-label col-md-auto" })
                 @Html.TextBoxFor(m => m.PeriodStart, new { @class = "form-control datepicker", placeholder = "Optional" })
             </div>
         </div>
         <div class="col-md-auto my-2">
             <div class="row">
-                @Html.Label("", "to", new { @class = "col-form-label col-auto" })
+                @Html.Label("", "to", new { @class = "col-form-label col-md-auto" })
                 @Html.TextBoxFor(m => m.PeriodEnd, new { @class = "form-control datepicker", placeholder = "Optional" })
                 @Html.ValidationMessageFor(m => m.PeriodEnd)
             </div>
