--- a/PimWeb/Views/Search/SearchPartial.cshtml
+++ b/PimWeb/Views/Search/SearchPartial.cshtml
@@ -12,7 +12,13 @@
             </div>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="row">
+        <div class="col-md-auto my-2">
+            <div class="form-check form-switch form-control border-0">
+                @Html.CheckBoxFor(x => x.Fuzzy, new { @class = "form-check-input" })
+                @Html.LabelFor(x => x.Fuzzy, new { @class = "form-check-label" })
+            </div>
+        </div>
         <div class="col-md-auto my-2">
             <div class="row">
                 @Html.Label("", "Last update time from", new { @class = "col-form-label col-md-auto" })
