--- a/PimWeb/Views/Account/Login.cshtml
+++ b/PimWeb/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
         <section id="loginForm" class="mx-2">
             @using (Html.BeginForm("Login", "Account", new { ViewBag.ReturnUrl }, FormMethod.Post, true, new { @class = "form-horizontal", role = "form" }))
             {
-                @Html.AntiForgeryToken()
+                //@Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="my-1">
                     @Html.LabelFor(m => m.Name, new { @class = "col-md-2 form-label" })
