Search simultaneously by update and create time; UI improvements; fix deletion from search

--- a/PimWeb/Views/Home/Index.cshtml
+++ b/PimWeb/Views/Home/Index.cshtml
@@ -22,10 +22,10 @@
         deleteNoteUrl: '@Url.Action("DeleteNote", "Home")',
         createNoteButtonSelector: '#btnSubmit',
         newNoteTextSelector: '#@Html.IdFor(m => m.NewNoteText)',
-        deleteNoteButtonSelector: '[delete-note-by-id]',
+        deleteNoteSelector: '[delete-note-by-id]',
         openNoteLinkSelector: '#formMessages',
         divInProgressSelector: '#progressIndicator',
-        buttonAttributeNameNoteId: "noteId",
+        attributeNameNoteId: "noteId",
         divNoteListSelector: "#divNoteList",
     };
 
