--- a/PimWeb/Views/ViewEdit/ViewEdit.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEdit.cshtml
@@ -19,7 +19,7 @@
         updateNoteUrl: '@Url.Action("Update")',
         createNoteButtonSelector: '#btnSubmit',
         newNoteTextSelector: '#@Html.IdFor(m => m.NoteText)',
-        deleteNoteButtonSelector: '#btnDelete',
+        deleteNoteSelector: '#btnDelete',
         updateNoteButtonSelector: '#btnUpdate',
         divInProgressSelector: '#progressIndicator',
     };
