--- a/PimWeb/Views/ViewEdit/ViewEditPartial.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEditPartial.cshtml
@@ -1,9 +1,7 @@
 ﻿@model PimWeb.Models.NoteViewModel
 
-@using (Html.BeginForm("Update", "ViewEdit", FormMethod.Post, new { id = "mainForm", @class = "form-horizontal" }))
+@using (Html.BeginForm("Delete", "ViewEdit", FormMethod.Post, new { id = "mainForm", @class = "" }))
 {
-    @Html.AntiForgeryToken()
-    
     @Html.HiddenFor(x => x.Version)
     if (Model.NoteDeleted)
     {
