--- a/PimWeb/Views/Shared/NoteList.cshtml
+++ b/PimWeb/Views/Shared/NoteList.cshtml
@@ -1,4 +1,5 @@
-﻿@using PimWeb.Models
+﻿@using Pim.CommonLib
+@using PimWeb.Models
 @model ICollection<NoteViewModel>
 
 @foreach (var note in Model)
@@ -9,7 +10,14 @@
             <a note-name href="@Url.Action("Index", "ViewEdit", new {id = note.NoteId})">@note.Caption</a>
             <a delete-note-by-id class="ms-3" href="#" noteId="@note.NoteId">delete</a>
             <br/>
-            @HomeViewModel.GetNoteTextSummary(note)
+            @if (!note.SearchHeadline.IsNullOrWhiteSpace())
+            {
+                @Html.Raw(note.SearchHeadline) @:(@($"{note.Rank:F2}"))
+            }
+            else
+            {
+                @HomeViewModel.GetNoteTextSummary(note)
+            }
             @if (note.LastUpdateTime.HasValue && note.CreateTime.HasValue && Math.Abs((note.LastUpdateTime.Value - note.CreateTime.Value).TotalSeconds) > 1)
             {
                 @:&nbsp; <span class="text-muted small">@($"(Created {note.CreateTime:ddd dd-MMM-yy, HH:mm})")</span>
