--- a/PimWeb/Views/ViewEdit/ViewEdit.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEdit.cshtml
@@ -3,12 +3,21 @@
 @{
     ViewBag.Title = Model.Caption ?? "Unsaved note";
     ViewBag.ShowPageCaption = true;
+    
+    var edit = ViewBag.Edit == true;
+    var altModeLinkText = edit ? "View read only" : "Edit";
 }
 
 @Html.Partial("ViewEditPartial", Model)
-    
+
 <div>
     @Html.ActionLink("Back to home page", "Index", "Home")
+    
+    @if (Model.Version.HasValue)
+    {
+        @: |
+        <a href="@Url.Action("Index", new {id = Model.NoteId, edit = !edit})">@altModeLinkText</a>
+    }
 </div>
 
 <script>
