--- a/PimWeb/Views/ViewEdit/ViewEditPartial.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEditPartial.cshtml
@@ -14,43 +14,55 @@
         <br />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
    
-        <div class="form-group">
+        <div class="">
             @Html.HiddenFor(model => model.NoteId)
             <div class="col-md-12">
-                @Html.TextAreaFor(model => model.NoteText, new { @class = "form-control", style = "height: 20em" })
-                @Html.ValidationMessageFor(model => model.NoteText, "", new { @class = "text-danger" })
+                @if (ViewBag.Edit == true)
+                {
+                    @Html.TextAreaFor(model => model.NoteText, new { @class = "form-control", style = "height: 20em" })
+                    @Html.ValidationMessageFor(model => model.NoteText, "", new { @class = "text-danger" })
+                }
+                else
+                {
+                    <div style="white-space: pre-wrap; overflow-x: auto" class="border border-1 border-secondary rounded-1 p-1">
+                        @Model.NoteText
+                    </div>
+                }
             </div>
         </div>
 
         <hr/>
 
-        <div class="form-group row">
+        <div class="row">
             @Html.LabelFor(m => m.CreateTime, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DisplayFor(m => m.CreateTime)
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="row">
             @Html.LabelFor(m => m.LastUpdateTime, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DisplayFor(m => m.LastUpdateTime)
             </div>
         </div>
 
-        <div class="form-group row">
+        <div class="row">
             @Html.LabelFor(m => m.Version, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DisplayFor(m => m.Version)
             </div>
         </div>
     
-        <div class="form-group row my-2">
-            <div class="col-md-offset-2 col-md-10">
-                <input id="btnUpdate" type="submit" value="Update" class="btn btn-outline-primary" />
-                &nbsp;
-                <input type="submit" id="btnDelete" class="btn btn-warning" value="Delete" />
+        @if (ViewBag.Edit == true)
+        {
+            <div class="row my-2">
+                <div class="col-md-offset-2 col-md-10">
+                    <input id="btnUpdate" type="submit" value="Update" class="btn btn-outline-primary" />
+                    &nbsp;
+                    <input type="submit" id="btnDelete" class="btn btn-warning" value="Delete" />
+                </div>
             </div>
-        </div>
+        }
     }
 }
