Allow to search by time period without query or browse all; fix search page size

--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -14,7 +14,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex">
                     <ul class="navbar-nav flex-grow-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" href="/Home/About">About</a>
+                            <a class="nav-link text-dark" asp-area="" href="~/Home/About">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" href="~/Search" title="Search / browse">Search</a>
                         </li>
                     </ul>
                     <div class="d-md-flex flex-grow-1 justify-content-end">
