--- a/PimWeb/Views/ViewEdit/ViewEditPartial.cshtml
+++ b/PimWeb/Views/ViewEdit/ViewEditPartial.cshtml
@@ -3,7 +3,7 @@
 @using (Html.BeginForm("Delete", "ViewEdit", FormMethod.Post, new { id = "mainForm", @class = "" }))
 {
     @Html.HiddenFor(x => x.Version)
-    if (Model.NoteDeleted)
+    if (Model.IfDeleted)
     {
         <h2>
             Note does not exist
@@ -15,7 +15,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
    
         <div class="">
-            @Html.HiddenFor(model => model.NoteId)
+            @Html.HiddenFor(model => model.Id)
             <div class="col-md-12">
                 @if (ViewBag.Edit == true)
                 {
