--- a/PimWeb/Views/Search/FilesPartial.cshtml
+++ b/PimWeb/Views/Search/FilesPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PimWeb.Models
-@model PimWeb.Models.NoteSearchViewModel
+@model PimWeb.Models.FileSearchViewModel
 
 @using (Html.BeginForm("Search", "Search", FormMethod.Get, new {id = "mainForm"}))
 {
