--- a/PimWeb/Views/Search/Files.cshtml
+++ b/PimWeb/Views/Search/Files.cshtml
@@ -1,9 +1,9 @@
 ﻿@model PimWeb.Models.NoteSearchViewModel
 @{
-    ViewBag.Title = "Search";
+    ViewBag.Title = "Files";
 }
 
-@Html.Partial("SearchPartial", Model, ViewData)
+@Html.Partial("FilesPartial", Model, ViewData)
 
 <script>
 @section Init
@@ -11,15 +11,15 @@
     const config = {
         mainFormSelector: '#mainForm',
         deleteNoteUrl: '@Url.Action("Delete")',
-        deleteNoteSelector: '[delete-note-by-id]',
+        deleteNoteSelector: '[delete-file-by-id]',
         divInProgressSelector: '#progressIndicator',
         attributeNameNoteId: "noteId",
         //divNoteListSelector: "#divNoteList",
     };
 
-    (pim.pages.search)
+    (pim.pages.files)
     &&
-    (pim.pages.search.init(config));
+    (pim.pages.files.init(config));
 }
 </script>
 
