--- a/PimWeb/Views/Shared/_Layout.cshtml
+++ b/PimWeb/Views/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
+    <script src="~/lib/jquery.fileupload/jquery.fileupload.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/pim.js" asp-append-version="true"></script>
     <script src="~/js/SeeLatestAndCreate.js" asp-append-version="true"></script>
